--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,1 +1,3 @@
 .label_input{font-size: 0.8rem; color:#007bff;}
+.field_box{ border-top: 3px solid #007bff;border-bottom: 1px solid #007bff;border-radius: 5px; padding: 15px 5px;}
+.container-cotacao-res { padding: 25px 15px;}
